objects/Account_Product_Information__c.object
<CustomObject>
    <description>Contains the information about products in context with each account</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountProductInformation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Account_Product_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Landscape Information</label>
    <nameField>
        <displayFormat>API-{000000}</displayFormat>
        <label>Product Landscape Information #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Landscape Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>